wayland: Fix sending wl_data_source::dnd_action(0) after drop

updateDragTarget() can be called after performing a drop to clean up the
drop handler. If that happens, don't send the dnd action.

BUG: 512235